apps/homepage/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
spec:
  type: ClusterIP
  selector:
    app: homepage
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
